[package]
name = "pith"
version = "0.1.3"
description = "Pith is a decentralized prediction market"
edition = "2021"
keywords = ["solana", "crypto", "decentralized", "market"]

[features]
no-entrypoint = []
default = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
solana-program = "1.18.1"
borsh = { version ="1.4.0", features = ["derive"] }
num_enum = "0.7.2"
shank = "0.4.2"

[dev-dependencies]
